2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix local external declarations

2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix theory name
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * multiple local variable declarations
        * no asserts any more on sync_master
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * pass location to declaration_fun and give an error at the next assert
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix importings, indentation
        * output expressions for static casts
        * fix static cast order
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * static casts
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix name_of_function

        ast_graph
        * option -hide-types hides all type nodes

        CFG
        * option -ids adds node ids in dot

        Semantic
        * a few more orientation comments
        * print function info in the generated pvs

2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix byte-code compilation in various dirs
        * put a generic string_of_location in olmar/util/more_string

        Semantic:
        * change Makefile for byte-code compilation (for debugging)
        * pass locations down where necessary and print a source code
          related error message just before assert false (on some locations)

2007-11-26  Hendrik Tews  <tews@tandem.cs.ru.nl>

        CFG
        * added testcase for standard conversions

        Olmar
        * configure disables wiki_bot if ocamlfind is not found
        * add generation of expression_type to ast_accessors
        * new option -syntax for ast_graph to select only the real syntax
          nodes

2007-11-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added olmar/BUILDING

        Olmar